applications/api-ingress-cn-north4/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: mindspore-api
  name: mindspore-api
