applications/api-ingress-cn-north4/meetingserver-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: meetingserver-service
spec:
  type: ExternalName
  externalName: meeting-service.meetingserver.svc.cluster.local
