applications/api-ingress-cn-north4/nginx-purge.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-purger-service
spec:
  type: ExternalName
  externalName: ingress-nginx-purger.ingress-nginx.svc.cluster.local
