applications/api-ingress-cn-north4/poetry-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: poetry-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 38999
---
kind: Endpoints
apiVersion: v1
metadata:
  name: poetry-service
subsets:
  - addresses:
      - ip: 123.60.211.2
    ports:
      - port: 38999
